tests/parsing/smtlib/v2.6/errors/099_get-uinsat-core_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/099_get-uinsat-core_unclosed_1.smt2", line 1, character 16-17:
1 | (get-unsat-core _)
                    ^
Error while parsing a get-unsat-core command, read the reserved word '_',
      but expected a closing parenthesis.
